Advanced search implemented - spacing needs to be fixed

--- a/src/Components/Pages/TopicDoc/topicDoc.css
+++ b/src/Components/Pages/TopicDoc/topicDoc.css
@@ -182,3 +182,7 @@ div.accordion {
     display: block;
     margin: 0px;
 }
+
+.MuiSelect-outlined.MuiSelect-outlined {
+    padding: 9.5px;
+}
